Require Java 11 or newer