@@ -21,7 +21,7 @@ import static org.hamcrest.MatcherAssert.assertThat;
 public class ThrowBlockTest extends AbstractGroovyCpsTest {
     @Test
     public void stackTraceFixup() throws Throwable {
-        List<StackTraceElement> elements = Arrays.asList((StackTraceElement[]) evalCPSonly(
+        List<StackTraceElement> elements = List.of((StackTraceElement[]) evalCPSonly(
             "\n" +
             "\n" +
             "def x() {\n" +
