@@ -105,7 +105,7 @@ public class CpsFlowDefinition extends FlowDefinition {
 
     // Used only from Groovy tests.
     public CpsFlowExecution create(FlowExecutionOwner handle, Action... actions) throws IOException {
-        return create(handle, StreamTaskListener.fromStderr(), Arrays.asList(actions));
+        return create(handle, StreamTaskListener.fromStderr(), List.of(actions));
     }
 
     @Override
