@@ -61,7 +61,7 @@ public class AmbiguousEchoLowerStep extends Step implements Serializable {
 
         @Override
         public Set<? extends Class<?>> getRequiredContext() {
-            return Collections.singleton(TaskListener.class);
+            return Set.of(TaskListener.class);
         }
     }
 
