@@ -50,7 +50,7 @@ public class EchoStringAndDoubleStep extends Step implements Serializable {
 
         @Override
         public Set<? extends Class<?>> getRequiredContext() {
-            return Collections.singleton(TaskListener.class);
+            return Set.of(TaskListener.class);
         }
     }
 
